# Generalization_Bound_Toolbox

./: LICENSE  README.md  pyproject.toml
.github/workflows/: build-toolkit.yaml  test-toolkit.yaml
src/gbtoolbox/: Makefile  bounds.py  dft.py  ft_tools.c  gen_ztw.c  misc.py  requirements.txt
tests/: Cifar10.ipynb  TestProductSines.ipynb  TestProductSinesCompression.ipynb  test_bounds.py  test_cuda_dft.py  test_dft.py
