 [build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gbtoolbox"
version = "0.0.2"
authors = [
  { name="Jonathan Miller", email="jon@euler-sci.com" },
  { name="Thomas Reinke", email="tom@euler-sci.com" },
]
description = "Tools for neural network generalization bounds"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "torch>=2.0.1",
  "numpy>=1.24.3",
  "numba>=0.57.0",
  "scipy>=1.10.1",
  "geomloss>=0.2.6",
]

[project.urls]
"Homepage" = "https://github.com/jonmiller3/Generalization_Bound_Toolbox"
